Alle .php‐Dateien in .html umbenannt
Ophelia bekommt das auch ohne die Endung hin und weiß, was zu tun ist.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1662 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/form.html
+++ b/web/form.html
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 <!--
-<?php include('header.php'); ?>
+<?php include('header.html'); ?>
 -->
 
 <h1>Hinweise zur Form</h1>
@@ -85,5 +85,5 @@
 </ul>
 
 <!--
-<?php include('footer.php'); ?>
+<?php include('footer.html'); ?>
 -->
