--- a/web/header.html
+++ b/web/header.html
@@ -67,16 +67,16 @@ function list_skripte($link)
 	    </div>
 
 	    <div class='navheading'>
-	      <a href='./news.php'>Aktuelles</a>
+	      <a href='./news.html'>Aktuelles</a>
 	    </div>
 
 	    <div class='navheading'>
 	      Dokumentation
 
 	      <div class='navmenu'>
-	        <div><a href='./windows.php'>SVN Anleitung f&uuml;r Windows</a></div>
-	        <div><a href='./skripte.php'>SVN Anleitung allgemein</a></div>
-	        <div><a href='./form.php'>Hinweise zur Form</a></div>
+	        <div><a href='./windows.html'>SVN Anleitung f&uuml;r Windows</a></div>
+	        <div><a href='./skripte.html'>SVN Anleitung allgemein</a></div>
+	        <div><a href='./form.html'>Hinweise zur Form</a></div>
 	      </div>
 	    </div>
 
@@ -91,7 +91,7 @@ function list_skripte($link)
                 foreach ($lines as $line)
                 {
                     $fields = preg_split("/\t+/", $line);
-                  echo "<div class=\"navmenu\"><a href=\"./skripte.php?id=",
+                  echo "<div class=\"navmenu\"><a href=\"./skripte.html?id=",
                     $fields[0], "\">";
                   if (count($fields) >= 2)
                     echo $fields[1];
@@ -104,32 +104,32 @@ function list_skripte($link)
 	    </div>
 
 	    <div class='navheading'>
-	      <a href='./status.php'>Status&uuml;bersicht</a>
+	      <a href='./status.html'>Status&uuml;bersicht</a>
 	    </div>
 
 	    <div class='navheading'>
 	      Download
 
 	      <div class='navmenu'>
-	        <div><a href='./skripte.php'>Quellcode</a></div>
+	        <div><a href='./skripte.html'>Quellcode</a></div>
 	        <!--  <div><a href='./pdf/'>PDFs</a></div> -->
 	      </div>
 	    </div>
 
 	    <!--<div class='navheading'>
-	      <a href='./mitarbeit.php'>Mitarbeit</a>
+	      <a href='./mitarbeit.html'>Mitarbeit</a>
 	    </div>-->
 
 	    <div class='navheading'>
-	      <a href='./mailingliste.php'>Mailingliste</a>
+	      <a href='./mailingliste.html'>Mailingliste</a>
             </div>
 
 	    <div class='navheading'>
-	      <a href='./links.php'>Links</a>
+	      <a href='./links.html'>Links</a>
             </div>
 
 	    <div class='navheading'>
-	      <a href='./kontakt.php'>Kontakt</a>
+	      <a href='./kontakt.html'>Kontakt</a>
 	    </div>
 
 	  </td>
