--- a/web/index.html
+++ b/web/index.html
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 <!--
-<?php include('header.php'); ?>
+<?php include('header.html'); ?>
 -->
 
 <p>Das Projekt
@@ -19,7 +19,7 @@ inhaltliche als auch orthographische.<p>
 <p>Zum Schreiben der Skripte verwenden wir
 <a href='http://www.latex-project.org/'>LaTeX</a>. Hinweise zur Form und
 eine Vorlage zum Schreiben neuer Skripte findet man unter
-<a href='form.php'>Dokumentation</a>.</p>
+<a href='form.html'>Dokumentation</a>.</p>
 
 <p>Es gestaltet sich schwierig,
 &Auml;nderungen von verschiedenen Benutzern von Hand einzupflegen. Für diese
@@ -41,9 +41,9 @@ Drohung: Es kann jeder jederzeit nachvollziehen, wer welche Änderungen
 gemacht hat (svn diff oder svn log).</p>
 
 <p>Wie man Subversion verwendet, wird in der
-<a href='svn.php'>Dokumentation</a> erläutert. Dort gibt es auch
+<a href='svn.html'>Dokumentation</a> erläutert. Dort gibt es auch
 eine Erklärung für
-<a href='windows.php'>Windows</a>.</p>
+<a href='windows.html'>Windows</a>.</p>
 
 <h2>Die Frage nach dem &bdquo;Warum&ldquo;</h2>
 
@@ -102,5 +102,5 @@ veröffentliche. Ich will kurz mal einige Gründe nennen:
 </ul>
 
 <!--
-<?php include('footer.php'); ?>
+<?php include('footer.html'); ?>
 -->
