--- a/web/links.html
+++ b/web/links.html
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 <!--
-<?php include('header.php'); ?>
+<?php include('header.html'); ?>
 -->
 
 <ul><li>
@@ -81,6 +81,6 @@ LaTeX - Fortgeschrittene Anwendungen</a></li>
 </ul>
 
 <!--
-<?php include('footer.php'); ?>
+<?php include('footer.html'); ?>
 -->
 
