--- a/web/mail.html
+++ b/web/mail.html
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 <!--
 <?php
-include('header.php');
+include('header.html');
 
 // echo "<b>id=-$id- body=-$body- knopf=$knopf $HTTP_REFERER</b><br>";
 if ($id and $body and $knopf == Absenden)
@@ -20,7 +20,7 @@ else
   echo "Es gab Probleme beim Versand. Bitte wende Dich per E-Mail an die ".
       "Mailingliste.";
 
-include('footer.php');
+include('footer.html');
 ?>
 -->
 
