--- a/web/mailingliste.html
+++ b/web/mailingliste.html
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 <!--
-<?php include('header.php'); ?>
+<?php include('header.html'); ?>
 -->
 
 <p>Diskussionen werden auf der Mailingliste <a
@@ -22,5 +22,5 @@ befindet sich hier: <a href="http://lc03.rz.uni-jena.de/pipermail/skripte/">
 </p>
 
 <!--
-<?php include('footer.php'); ?>
+<?php include('footer.html'); ?>
 -->
