--- a/web/news.html
+++ b/web/news.html
@@ -1,21 +1,21 @@
 <!-- $Id$ -->
 <!--
 <?php
-include('header.php');
+include('header.html');
 
 echo "<h1>Aktuelle Änderungen</h1>";
 
 if (!$id) {
 	echo '<ul>';
-    	list_skripte("news.php");
+    	list_skripte("news.html");
         echo "</ul>\n";
 } else {
-	echo "<a href='./news.php'>Zurück zur Übersicht</a>
+	echo "<a href='./news.html'>Zurück zur Übersicht</a>
 	  <h2>$id</h2>
 	  <pre>", htmlentities(file_get_contents("$id.Changelog"), ENT_COMPAT, "UTF-8"),
 	  "</pre>";
 }
 
-include('footer.php');
+include('footer.html');
 ?>
 -->
