--- a/web/skripte.html
+++ b/web/skripte.html
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 <!--
 <?php
-include('header.php');
+include('header.html');
 
 // set id, if not set in URL
 if (!$id) {
@@ -10,7 +10,7 @@ if (!$id) {
 	Im Folgenden steht $id f&uuml;r den Namen eines der Projekte für das jeweilige
 	Vorlesungsskript. Zur Zeit gibt es die folgenden:
 	<ul>";
-	list_skripte("skripte.php");
+	list_skripte("skripte.html");
         echo "</ul>";
 } else {
 	echo "<h1>Skript: $id</h1>";
@@ -30,12 +30,12 @@ Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen werd
 
 if ($id=="SKRIPT") {
 	echo "<p>Windowsanleitung unter:
-	<a href='./windows.php'>
-	http://www.minet.uni-jena.de/~joergs/skripte/windows.php</a></p>";
+	<a href='./windows.html'>
+	http://www.minet.uni-jena.de/~joergs/skripte/windows.html</a></p>";
 } else {
 	echo "<p>Windowsanleitung unter:
-	<a href='./windows.php?id=$id'>
-	http://www.minet.uni-jena.de/~joergs/skripte/windows.php</a></p>";
+	<a href='./windows.html?id=$id'>
+	http://www.minet.uni-jena.de/~joergs/skripte/windows.html</a></p>";
 
 	echo "<h2>Übersetzte Versionen</h2>
 	<ul>";
@@ -66,7 +66,7 @@ if ($id=="SKRIPT") {
                   <li>Gib auch 5&nbsp;Wörter vor und nach der Fehlerstelle an.
                   <li>Deine E-Mailadresse um Dich nochmal fragen zu können.
                 </ul>
-                <form method=\"post\" action=\"mail.php\">
+                <form method=\"post\" action=\"mail.html\">
                   <input type=\"hidden\" name=\"id\" value=\"$id\"/>
                   <textarea name=\"body\" cols=\"60\" rows=\"10\"></textarea>
                   <br>
@@ -100,6 +100,6 @@ if ($id != "SKRIPT" && file_exists("$id.Changelog"))
       "</pre>\n";
 }
 
-include('footer.php');
+include('footer.html');
 ?>
 -->
