--- a/web/status.html
+++ b/web/status.html
@@ -1,6 +1,6 @@
 <!-- $Id$ -->
 <!--
-<?php include('header.php'); ?>
+<?php include('header.html'); ?>
 -->
 
 <table>
@@ -65,6 +65,6 @@ foreach ($lines as $line)
 </table>
 
 <!--
-include('footer.php');
+include('footer.html');
 ?>
 -->
