--- a/web/windows.html
+++ b/web/windows.html
@@ -1,7 +1,7 @@
 <!-- $Id$ -->
 <!--
 <?php
-include('header.php');
+include('header.html');
 
 if (!$id) {
 	$id="SKRIPT";
@@ -9,11 +9,11 @@ if (!$id) {
 	Im folgenden ist SKRIPT der Name eines der Projekte für das jeweilige
 	Vorlesungsskript. Zur Zeit gibt es die folgenden:
 	<ul>";
-    	list_skripte("windows.php");
+    	list_skripte("windows.html");
         echo "</ul>";
 } else {
 	echo "<h1>Windows-Anleitung für das Skript: $id</h1>
-	<p>(Zur <a href='./windows.php'>allgemeinen Windowsanleitung</a>)</p>";
+	<p>(Zur <a href='./windows.html'>allgemeinen Windowsanleitung</a>)</p>";
 }
 ?>
 -->
@@ -173,6 +173,6 @@ Du hast Änderungen gemacht und willst diese veröffentlichen?
 
 <!--
 <?php
-include('footer.php');
+include('footer.html');
 ?>
 -->
