--- a/web/kontakt.html
+++ b/web/kontakt.html
@@ -1,11 +1,11 @@
 <!-- $Id$ -->
 <!--
-<?php include('header.php'); ?>
+<?php include('header.html'); ?>
 -->
 
 <p>Für Fragen, Kommentare, Hinweise oder Vorschläge einfach eine E-Mail an
 <a href='mailto:skripte@listserv.uni-jena.de'>skripte@listserv.uni-jena.de</a>.</p>
 
 <!--
-<?php include('footer.php'); ?>
+<?php include('footer.html'); ?>
 -->
