--- a/web/skripte.html
+++ b/web/skripte.html
@@ -12,13 +12,17 @@ if (!$id) {
 } else {
 	echo "<h1>Skript: $id</h1>";
 }
-echo "<p>Für die Kommandozeile: Eine aktuelle Version von SVN selbst ist unter
-<a href=\"http://subversion.tigris.org/\">http://subversion.tigris.org/</a> verfügbar.</p>
+?>
+-->
+
+<p>Für die Kommandozeile: Eine aktuelle Version von SVN selbst ist unter
+<a href="http://subversion.tigris.org/">http://subversion.tigris.org/</a> verfügbar.</p>
 
 Die erste lokale Kopie wird mit folgendem Befehl erstellt
 (<b><tt>FRZ-Login</tt> durch den Unix-Benutzernamen ersetzen!</b>):
-<pre>svn checkout svn+ssh://FRZ-Login@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/$id</pre>
-
+<!--
+<pre>svn checkout svn+ssh://FRZ-Login@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/<?php echo $id ?></pre>
+-->
 Später wird die lokale Kopie mit folgendem Befehl aktualisiert (in dem lokalen Verzeichnis <tt>$id</tt>):
 <pre>svn update</pre>
 
