Alle Dateien in UTF‐8 kodieren
git-svn-id: https://svn.lug-jena.de/uni-skripte@1668 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/form.html
+++ b/web/form.html
@@ -2,17 +2,17 @@
 
 <ul><li>Alle Dokumente sollten sich als PDF und PostScript mit
   <a href="http://www.pps.jussieu.fr/~beffara/soft/rubber/">rubber</a>
-  übersetzen lassen</li>
+  Ã¼bersetzen lassen</li>
 
 <li>Die Dokumente sind fast alle mit <tt>latin1</tt>-Codierung geschrieben. Dies
-  sollte auch fortgeführt werden, wenn es nicht zu Problemen mit anderen
+  sollte auch fortgefÃ¼hrt werden, wenn es nicht zu Problemen mit anderen
   Plattformen kommt, da man sonst Probleme im Umgang mit \verb bekommt und
-  auch die Werkzeuge zur Bearbeitung keine Unterstützung dafür bieten
+  auch die Werkzeuge zur Bearbeitung keine UnterstÃ¼tzung dafÃ¼r bieten
   (angepasstes Suchen/Ersetzen,&nbsp;...)</li>
 
-<li>Als Dokumentklasse hat sich <tt>scrreprt</tt> als günstig erwiesen, da das
-  Skript schon die Ausmaße eines Buches annimmt, aber <tt>scrbook</tt> nicht die
-  passende Klasse dafür ist. Als Option sollte "twoside" gesetzt werden.</li>
+<li>Als Dokumentklasse hat sich <tt>scrreprt</tt> als gÃ¼nstig erwiesen, da das
+  Skript schon die AusmaÃŸe eines Buches annimmt, aber <tt>scrbook</tt> nicht die
+  passende Klasse dafÃ¼r ist. Als Option sollte "twoside" gesetzt werden.</li>
 
 <li>Als <tt>pagestyle</tt> finde ich "<tt>headings</tt>" gut, da im Seitenkopf das Kapitel
   und der Abschnitt stehen. <tt>\pagestyle{headings}</tt></li>
@@ -20,23 +20,23 @@
 <li>Ob das Skript mit Absatzeinzug geschrieben wird oder nicht, sollte an
   der Menge des Textes festgemacht werden. LaTeX braucht eine gewisse
   Menge an Text pro Absatz um sinnvolle Formatierungen zu erreichen. Dies
-  ist nicht möglich, wenn jeder Absatz nur aus zwei Sätzen besteht. In
-  dem Fall sollte der Absatzeinzug entfallen und dafür ein Abstand
-  zwischen den Absätzen gemacht werden. Dies wird mit der Klassenoption
+  ist nicht mÃ¶glich, wenn jeder Absatz nur aus zwei SÃ¤tzen besteht. In
+  dem Fall sollte der Absatzeinzug entfallen und dafÃ¼r ein Abstand
+  zwischen den AbsÃ¤tzen gemacht werden. Dies wird mit der Klassenoption
   <tt>halfparskip*</tt> erreicht.
 
-<li>Für Sätze, Beispiele, Bemerkungen u.ä. hat sich <tt>ntheorem</tt> als sehr
+<li>FÃ¼r SÃ¤tze, Beispiele, Bemerkungen u.Ã¤. hat sich <tt>ntheorem</tt> als sehr
   brauchbar erwiesen.
 
   <a href='http://user.informatik.uni-goettingen.de/~may/Ntheorem/'>
   http://user.informatik.uni-goettingen.de/~may/Ntheorem/</a>
 
-  Es ist auch möglich, sich die Dateien unter
+  Es ist auch mÃ¶glich, sich die Dateien unter
   http://www.minet.uni-jena.de/~joergs/skripte/sty/ in die Arbeitskopie
   des Skripts zu kopieren. Vorsicht: Diese nicht mit in das Repository
   aufnehmen!</li>
 
-<li>Für mathematische Belange hat sich <tt>amsmath</tt> als sehr gut erwiesen.</li>
+<li>FÃ¼r mathematische Belange hat sich <tt>amsmath</tt> als sehr gut erwiesen.</li>
 
 <li>Als Algorithmenumgebung wird <tt>algorithm</tt> und <tt>algorithmic</tt> verwendet.
   Zu Finden sind diese beiden Pakete unter:
@@ -46,28 +46,28 @@
 
 <li>Bilder sollten mit <tt>xfig</tt> (mit -specialtext kann direkt LaTeX erzeugt
   werden), <tt>gnuplot</tt> oder <tt>tcm</tt> oder anderen vektororientierten Programmen
-  erstellt werden. Ist dies nicht möglich oder sinnvoll, dann sollte <tt>png</tt>
-  oder <tt>jepg</tt> als Format gewählt werden. pdflatex kann keine ps- oder
+  erstellt werden. Ist dies nicht mÃ¶glich oder sinnvoll, dann sollte <tt>png</tt>
+  oder <tt>jepg</tt> als Format gewÃ¤hlt werden. pdflatex kann keine ps- oder
   eps-Dateien einbinden!<br>
 
   Immer die Originaldateien der Programme mit ins Archiv legen!<br>
 
   ACHTUNG: Zur Erstellung von combined pdf/latex Bildern bitte auf die Version
-  achten. Es hat sich ergeben, daß die pdf-Anteile der Bilder um 90° verdreht
+  achten. Es hat sich ergeben, daÃŸ die pdf-Anteile der Bilder um 90Â° verdreht
   werden, wenn man mit xfig-Version < 3.2.5 arbeitet.</li>
 
-<li>Jedes Dokument <b>muss</b> eine Erklärung über die Verwendbarkeit des
-  Dokuments (Lizenz) und Möglichkeiten zur Kontaktaufnahme beinhalten. Als
-  Vorlage dafür kann das Vorwort aus dem
+<li>Jedes Dokument <b>muss</b> eine ErklÃ¤rung Ã¼ber die Verwendbarkeit des
+  Dokuments (Lizenz) und MÃ¶glichkeiten zur Kontaktaufnahme beinhalten. Als
+  Vorlage dafÃ¼r kann das Vorwort aus dem
   <a href="vorlage/skript.latex">Beispielskript</a> verwendet werden.</li>
 
-<li>Da regelmäßg Ausgaben der Dokumente erstellt werden, sollte an einer
+<li>Da regelmÃ¤ÃŸg Ausgaben der Dokumente erstellt werden, sollte an einer
   Stelle im Dokument die Version des Dokuments (<tt>$LastChangedRevision$</tt>)
-  und das Datum (<tt>$LastChangedDate$</tt>) der letzten Änderung verwerkt
+  und das Datum (<tt>$LastChangedDate$</tt>) der letzten Ã„nderung verwerkt
   werden. Dies ist zum Beispiel im Vorwort des
-  <a href="vorlage/skript.latex">Beispielskripts</a> umgesetzt. Dafür hat sich
-  das Paket <tt>svn</tt> als praktisch erwiesen. Zusätzlich muss mit svn die
-  Ersetzung der Schlüsselwörter aktiviert werden:
+  <a href="vorlage/skript.latex">Beispielskripts</a> umgesetzt. DafÃ¼r hat sich
+  das Paket <tt>svn</tt> als praktisch erwiesen. ZusÃ¤tzlich muss mit svn die
+  Ersetzung der SchlÃ¼sselwÃ¶rter aktiviert werden:
 
   <pre>svn propset svn:keywords "LastChangedRevision LastChangedDate" skript.latex</pre></li>
 
@@ -75,6 +75,6 @@
   unwahrscheinlicher ist, dass diese Zeichenketten in dem Dokument
   auftreten, als <tt>$Rev$</tt> oder <tt>$Date$</tt>.</li>
 
-<li>Vorlagen für neue Skripte befinden sich im Verzeichnis
+<li>Vorlagen fÃ¼r neue Skripte befinden sich im Verzeichnis
    <a href='./vorlage/'>vorlage</a></li>
 </ul>
