--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,13 @@
 <p>Das Projekt
-&bdquo;Vorlesungsskripte der Fakultät für Mathematik und Informatik&ldquo; ist eine Plattform
-von Studierenden für Studierende, um Skripte zu sammeln, zu erstellen, zu
-bearbeiten und natürlich zu verwenden.</p>
+&bdquo;Vorlesungsskripte der FakultÃ¤t fÃ¼r Mathematik und Informatik&ldquo; ist eine Plattform
+von Studierenden fÃ¼r Studierende, um Skripte zu sammeln, zu erstellen, zu
+bearbeiten und natÃ¼rlich zu verwenden.</p>
 
 <p>Mittlerweile sind schon ein paar Skripte vorhanden.
-Einige sind nur zu Teilen, andere sind vollständig aber
-dafür sind noch Probleme beim Übersetzen. Aber das alles soll auch nur
+Einige sind nur zu Teilen, andere sind vollstÃ¤ndig aber
+dafÃ¼r sind noch Probleme beim Ãœbersetzen. Aber das alles soll auch nur
 ein Anfang sein. Wir hoffen, dass sich weitere Studenten finden, die
-Skripte verbessern, sei es in Bezug auf den Inhalt, Vollständigkeit oder
+Skripte verbessern, sei es in Bezug auf den Inhalt, VollstÃ¤ndigkeit oder
 den LaTeX-Satz. Leider sind vereinzelt auch noch Fehler versteckt, sowohl
 inhaltliche als auch orthographische.<p>
 
@@ -17,63 +17,63 @@ eine Vorlage zum Schreiben neuer Skripte findet man unter
 <a href='form.html'>Dokumentation</a>.</p>
 
 <p>Es gestaltet sich schwierig,
-&Auml;nderungen von verschiedenen Benutzern von Hand einzupflegen. Für diese
+&Auml;nderungen von verschiedenen Benutzern von Hand einzupflegen. FÃ¼r diese
 Aufgabe hat man sogenannte
 <a href='http://de.wikipedia.org/wiki/Versionsverwaltung'>Versions-Managment-Programme</a>
 entwickelt, die sich
-darum kümmern, dass Änderungen zweier Benutzer nicht im Konflikt
-zueinander stehen oder dass alle Benutzer auch die Änderungen der anderen
+darum kÃ¼mmern, dass Ã„nderungen zweier Benutzer nicht im Konflikt
+zueinander stehen oder dass alle Benutzer auch die Ã„nderungen der anderen
 Benutzer erhalten. Wir verwenden
 <a href='http://subversion.tigris.org/'>Subversion</a>.</p>
 
-<p>Diese Programme schützen natürlich nicht vor Sabotage oder davor neue
-Fehler in die Dokumente einzupflegen (es wäre zu schön, wenn ein Programm
+<p>Diese Programme schÃ¼tzen natÃ¼rlich nicht vor Sabotage oder davor neue
+Fehler in die Dokumente einzupflegen (es wÃ¤re zu schÃ¶n, wenn ein Programm
 erkennen kann, ob ein Text inhaltlich korrekt ist :). Daher appellieren wir
 an die soziale Kompetenz der Leute! Die Skripte sind alle kostenlos
-und ohne Verpflichtungen verfügbar. Es sollte also keiner einen Grund
-haben, die Skripte absichtlich zu schädigen. Aber denoch eine kleine
-Drohung: Es kann jeder jederzeit nachvollziehen, wer welche Änderungen
+und ohne Verpflichtungen verfÃ¼gbar. Es sollte also keiner einen Grund
+haben, die Skripte absichtlich zu schÃ¤digen. Aber denoch eine kleine
+Drohung: Es kann jeder jederzeit nachvollziehen, wer welche Ã„nderungen
 gemacht hat (svn diff oder svn log).</p>
 
 <p>Wie man Subversion verwendet, wird in der
-<a href='svn.html'>Dokumentation</a> erläutert. Dort gibt es auch
-eine Erklärung für
+<a href='svn.html'>Dokumentation</a> erlÃ¤utert. Dort gibt es auch
+eine ErklÃ¤rung fÃ¼r
 <a href='windows.html'>Windows</a>.</p>
 
 <h2>Die Frage nach dem &bdquo;Warum&ldquo;</h2>
 
-<p>Ich (Jörg aka joergs) bekomme immer wiedermal die Frage gestellt, warum ich
+<p>Ich (JÃ¶rg aka joergs) bekomme immer wiedermal die Frage gestellt, warum ich
 denn meine Mitschrift in LaTeX anfertige und sie dann im Internet
-veröffentliche. Ich will kurz mal einige Gründe nennen:
+verÃ¶ffentliche. Ich will kurz mal einige GrÃ¼nde nennen:
 <ul>
   <li>
-    Meine Handschrift ist nicht die Schönste und der Wiedererkennungswert
+    Meine Handschrift ist nicht die SchÃ¶nste und der Wiedererkennungswert
     sinkt stellenweise auf null. Da ist eine elektronische Fassung wesentlich
-    besser. Auch für die Archivierung oder die Suche darin &ndash;&nbsp;wer
+    besser. Auch fÃ¼r die Archivierung oder die Suche darin &ndash;&nbsp;wer
     kann schon Google in seinem Hefter suchen lassen?
   </li>
   <li>
     In meiner (handschriftlichen) Mitschrift zur Analysis&nbsp;2 hatte ich
-    einen Fehler, den ich erst in der Prüfung erkennen durfte. Daher hatte ich
-    die Hoffnung, dass durch die Veröffentlichung andere Leute solche Fehler
+    einen Fehler, den ich erst in der PrÃ¼fung erkennen durfte. Daher hatte ich
+    die Hoffnung, dass durch die VerÃ¶ffentlichung andere Leute solche Fehler
     sehen und mich darauf aufmerksam machen.
   </li>
   <li>
     <p>In meiner Analysis&nbsp;1-Vorlesung arbeitete der Dozent mit
-    vorgefertigten Folien, die er in einem Affentempo über den Projektor zog.
+    vorgefertigten Folien, die er in einem Affentempo Ã¼ber den Projektor zog.
     Es war ein echter Kampf, da am Ende der Stunde alles abgeschrieben zu
-    haben. In der Vorlesung selbst habe ich von seinen Erläuterungen nichts
-    verstanden, weil ich nur mit Abschreiben beschäftigt war. So ergeht/erging
+    haben. In der Vorlesung selbst habe ich von seinen ErlÃ¤uterungen nichts
+    verstanden, weil ich nur mit Abschreiben beschÃ¤ftigt war. So ergeht/erging
     es mir auch in anderen Vorlesungen.</p>
 
     <p>Mein Wunsch war immer, eine kooperative Anfertigung einer Mitschrift,
-    so dass sich drei Leute die Mühe machen müssen und alles mitschreiben
-    und alle anderen hören zu und versuchen zu verstehen. Dann tippen die drei
-    Mitschreiber ihre Aufzeichnungen ab und die Zuhörer machen Ergänzungen und
+    so dass sich drei Leute die MÃ¼he machen mÃ¼ssen und alles mitschreiben
+    und alle anderen hÃ¶ren zu und versuchen zu verstehen. Dann tippen die drei
+    Mitschreiber ihre Aufzeichnungen ab und die ZuhÃ¶rer machen ErgÃ¤nzungen und
     Verbesserungen.</p>
 
     <p>Zum Teil funktioniert das auch. Oft schreibe ich die Vorlesung mit und
-    Andere hören zu. Vielleicht klappt es irgendwann auch mal mit dem zweiten
+    Andere hÃ¶ren zu. Vielleicht klappt es irgendwann auch mal mit dem zweiten
     Schritt noch.</p>
   </li>
   <li>
@@ -81,16 +81,16 @@ veröffentliche. Ich will kurz mal einige Gründe nennen:
     werden, die in dieser Form oder in dieser Zusammenstellung nicht im
     Internet zu finden sind. Das Netz lebt davon, dass es Informationen
     bekommt. Daher finde ich es auch immer schade, wenn Dozenten ein Skript zu
-    ihrer Vorlesung haben, dieses aber nicht veröffentlichen. Das sind alles
-    verlohrene Informationen, weil keiner (außerhalb der Vorlesung) davon
-    etwas mitbekommt oder die Informationen nutzen könnte.
+    ihrer Vorlesung haben, dieses aber nicht verÃ¶ffentlichen. Das sind alles
+    verlohrene Informationen, weil keiner (auÃŸerhalb der Vorlesung) davon
+    etwas mitbekommt oder die Informationen nutzen kÃ¶nnte.
   </li>
   <li>
-    Und natürlich das ultimative Argument &bdquo;Weil ich es kann&ldquo;. Gut,
+    Und natÃ¼rlich das ultimative Argument &bdquo;Weil ich es kann&ldquo;. Gut,
     ich konnte es nicht, als ich angefangen habe, aber durch die Arbeit an den
     Skripten bin ich so schnell mit LaTeX vertraut geworden, dass ich diesen
-    Weg jedem empfehlen kann. Spätestens bei der Abschlussarbeit wird Euch
-    LaTeX einholen und da ist es besser vorher schonmal auf Tuchfühlung
+    Weg jedem empfehlen kann. SpÃ¤testens bei der Abschlussarbeit wird Euch
+    LaTeX einholen und da ist es besser vorher schonmal auf TuchfÃ¼hlung
     gegangen zu sein als dann erst damit anzufangen. Probiert es! Dieses
     Projekt eignet sich hervorragend, um in LaTeX einzusteigen.
   </li>
