--- a/web/kontakt.html
+++ b/web/kontakt.html
@@ -1,2 +1,2 @@
-<p>Für Fragen, Kommentare, Hinweise oder Vorschläge einfach eine E-Mail an
+<p>FÃ¼r Fragen, Kommentare, Hinweise oder VorschlÃ¤ge einfach eine E-Mail an
 <a href='mailto:skripte@listserv.uni-jena.de'>skripte@listserv.uni-jena.de</a>.</p>
