--- a/web/links.html
+++ b/web/links.html
@@ -4,19 +4,19 @@
  DANTE, Deutschsprachige Anwendervereinigung TeX e.&thinsp;V.</li>
 
  <li><a href='http://www.kubieziel.de/computer/latex-tutorial.html'>
- LaTeX-Tutorial</a>: Eine Einführung in LaTeX</li>
+ LaTeX-Tutorial</a>: Eine EinfÃ¼hrung in LaTeX</li>
 
  <li><a href='http://www.dante.de/CTAN/info/german/l2tabu/l2tabu.pdf'>
- LaTeX-Sündenregister</a>: Befehle, die nicht mehr in LaTeX verwendet
+ LaTeX-SÃ¼ndenregister</a>: Befehle, die nicht mehr in LaTeX verwendet
  werden sollen.</li>
 
  <li><a href='http://www.dante.de/faq/de-tex-faq/'>DE-TeX-FAQ: German FAQ
  about TeX and DANTE e.&thinsp;V.</a>: Fragen und Antworten zu LaTeX &ndash; kann
  sehr hilfreichsein, ist aber auch sehr umfangreich</li>
 
- <li>Eine <a href='http://www.zvisionwelt.de/typokurz.pdf'>kurze Einführung
-   in die Welt der Typografie</a>. Wer auf den Gedanken kommt, er müsse eine
-   andere Schriftart wählen oder nicht weiß, wann er welchen Strich (- oder
+ <li>Eine <a href='http://www.zvisionwelt.de/typokurz.pdf'>kurze EinfÃ¼hrung
+   in die Welt der Typografie</a>. Wer auf den Gedanken kommt, er mÃ¼sse eine
+   andere Schriftart wÃ¤hlen oder nicht weiÃŸ, wann er welchen Strich (- oder
     -- oder ---) verwenden soll, der solle hier mal reinsehen.
  </li>
 
@@ -25,21 +25,21 @@
  Hilfesuche.</li>
 
  <li><a href="http://linuxwiki.de/SubVersion">Eine kleine Beschreibung zu
-   Subversion mit nützlichen Verweisen</a></li>
+   Subversion mit nÃ¼tzlichen Verweisen</a></li>
 
  <li>Die Antwort auf "alle" Fragen zur Mathematik:
    <a href='http://www.dante.de/CTAN//info/math/voss/mathmode/Mathmode.pdf'>
      Herbert Voss' Mathmode</a></li>
 </ul>
 
-Die Qualität der folgenden Links kann ich nicht bewerten, da ich sie
+Die QualitÃ¤t der folgenden Links kann ich nicht bewerten, da ich sie
 noch nicht gelesen habe, aber ich hab sie auch irgendwo als Empfehlung
 aufgeschnappt:
 <ul><li><a href='http://www.wiwiss.fu-berlin.de/w3/w3iso/download/Latex_Fortgeschritten_Manuela_Juergens.pdf'>
 LaTeX - Fortgeschrittene Anwendungen</a></li>
 </ul>
 
-...und noch etwas Werbung für die Konkurrenz
+...und noch etwas Werbung fÃ¼r die Konkurrenz
 <ul>
   <li>Bis wir selbst ein Info&nbsp;3-Skript haben :), ist dieses hier, glaube
     ich sehr zu empfehlen. Ich fand es liest sich gut und behandelt auch alle
@@ -49,13 +49,13 @@ LaTeX - Fortgeschrittene Anwendungen</a></li>
      Info&nbsp;3 an der Uni Bonn</a>
   </li>
   <li><a href="http://www.minet.uni-jena.de/algebra/skripten/skripten.html">Viele
-	Mathematikvorlesungen</a> von Prof.&nbsp;Külshammer
+	Mathematikvorlesungen</a> von Prof.&nbsp;KÃ¼lshammer
   </li>
-  <li><a href="http://www.minet.uni-jena.de/www/fakultaet/mhj/">Analysis für
-        Informatiker</a> von Prof.&nbsp;Schmeißer
+  <li><a href="http://www.minet.uni-jena.de/www/fakultaet/mhj/">Analysis fÃ¼r
+        Informatiker</a> von Prof.&nbsp;SchmeiÃŸer
   </li>
   <li><a href="http://www.fabolu.de/index.php?page=studium">verschiedene Vorlesungen
-	für Physiker, Lineare Algebra&nbsp;1 und Analysis</a> von Fabian Stutzki
+	fÃ¼r Physiker, Lineare Algebra&nbsp;1 und Analysis</a> von Fabian Stutzki
   </li>
 </ul>
 
@@ -65,12 +65,12 @@ LaTeX - Fortgeschrittene Anwendungen</a></li>
     Funktionen oder plotten von Daten</li>
   <li><a href='http://epb.lbl.gov/xfig'>XFig</a> zum Erstellen von Vektorgrafiken</li>
   <li><a href='http://beffara.org/stuff/rubber.html'>rubber</a> als Hilfe
-    beim Übersetzen der Skripte</li>
-  <li><a href='http://www.miktex.org'>MikTex</a> für die Windows-Leute</li>
-  <li><a href='http://www.texniccenter.org'>TexnicCenter</a> auch für
+    beim Ãœbersetzen der Skripte</li>
+  <li><a href='http://www.miktex.org'>MikTex</a> fÃ¼r die Windows-Leute</li>
+  <li><a href='http://www.texniccenter.org'>TexnicCenter</a> auch fÃ¼r
     Windows-Leute</li>
   <li><a href='http://subversion.tigris.org/'>Subversion</a></li>
   <li><a href="http://rapidsvn.tigris.org/screenshots.html">RapidSVN</a> und
-    <a href="http://esvn.umputun.com/">esvn</a> als grafische Oberfläche
+    <a href="http://esvn.umputun.com/">esvn</a> als grafische OberflÃ¤che
     zu Subversion</li>
 </ul>
