--- a/web/mail.html
+++ b/web/mail.html
@@ -10,8 +10,8 @@ if ($id and $body and $knopf == Absenden)
 
     echo "Die E-Mail wurde an die ".
       "<a href=\"http://http://lc03.rz.uni-jena.de/pipermail/skripte/\">".
-      "Mailingliste</a> gesandt und sollte dort mit etwas Verzögerung zu ".
-      "lesen sein. Vielen Dank für die Unterstützung.";
+      "Mailingliste</a> gesandt und sollte dort mit etwas VerzÃ¶gerung zu ".
+      "lesen sein. Vielen Dank fÃ¼r die UnterstÃ¼tzung.";
 }
 else
   echo "Es gab Probleme beim Versand. Bitte wende Dich per E-Mail an die ".
