--- a/web/news.html
+++ b/web/news.html
@@ -1,13 +1,13 @@
 <!--
 <?php
-echo "<h1>Aktuelle Änderungen</h1>";
+echo "<h1>Aktuelle Ã„nderungen</h1>";
 
 if (!$id) {
 	echo '<ul>';
     	list_skripte("news.html");
         echo "</ul>\n";
 } else {
-	echo "<a href='./news.html'>Zurück zur Übersicht</a>
+	echo "<a href='./news.html'>ZurÃ¼ck zur Ãœbersicht</a>
 	  <h2>$id</h2>
 	  <pre>", htmlentities(file_get_contents("$id.Changelog"), ENT_COMPAT, "UTF-8"),
 	  "</pre>";
