--- a/web/skripte.html
+++ b/web/skripte.html
@@ -16,7 +16,7 @@ if env.QUERY_STRING:
 
   <p>
     Im Folgenden steht SKRIPT f&uuml;r den Namen eines
-    der Projekte für das jeweilige Vorlesungsskript. Zur Zeit gibt es die
+    der Projekte fÃ¼r das jeweilige Vorlesungsskript. Zur Zeit gibt es die
     folgenden:
   </p>
 
@@ -30,18 +30,18 @@ if env.QUERY_STRING:
   </ul>
 </tal:heading>
 
-<p>Für die Kommandozeile: Eine aktuelle Version von SVN selbst ist unter
-<a href="http://subversion.tigris.org/">http://subversion.tigris.org/</a> verfügbar.</p>
+<p>FÃ¼r die Kommandozeile: Eine aktuelle Version von SVN selbst ist unter
+<a href="http://subversion.tigris.org/">http://subversion.tigris.org/</a> verfÃ¼gbar.</p>
 
 Die erste lokale Kopie wird mit folgendem Befehl erstellt
 (<b><tt>FRZ-Login</tt> durch den Unix-Benutzernamen ersetzen!</b>):
 
 <pre>svn checkout svn+ssh://FRZ-Login@ppc214.mipool.uni-jena.de/home/stud/md01/joergs/.svnroot/skripte/<tal:id content="script_id" /></pre>
 
-Später wird die lokale Kopie mit folgendem Befehl aktualisiert (in dem lokalen Verzeichnis <tt>$id</tt>):
+SpÃ¤ter wird die lokale Kopie mit folgendem Befehl aktualisiert (in dem lokalen Verzeichnis <tt>$id</tt>):
 <pre>svn update</pre>
 
-Eigene Änderungen können mit dem folgenden Befehl auf den Server übertragen werden (in dem lokalen Verzeichnis $id):
+Eigene Ã„nderungen kÃ¶nnen mit dem folgenden Befehl auf den Server Ã¼bertragen werden (in dem lokalen Verzeichnis $id):
 <pre>svn commit</pre>";
 
 if ($id=="SKRIPT") {
@@ -53,7 +53,7 @@ if ($id=="SKRIPT") {
 	<a href='./windows.html?id=$id'>
 	http://www.minet.uni-jena.de/~joergs/skripte/windows.html</a></p>";
 
-	echo "<h2>Übersetzte Versionen</h2>
+	echo "<h2>Ãœbersetzte Versionen</h2>
 	<ul>";
         $filename="$id.ps";
         if (file_exists($filename)) {
@@ -70,17 +70,17 @@ if ($id=="SKRIPT") {
                einen Fehler gefunden haben &ndash;&nbsp;egal ob Rechtschreib- oder
                Satzfehler oder einen inhaltlichen Fehler&nbsp;&ndash;, dann melde
                ihn uns. Ebenso sind wir an besseren Formulierungen und
-               Ergänzungen interessiert.</p>
+               ErgÃ¤nzungen interessiert.</p>
 
-              <p>Bitte mach so viele Angaben wie möglich:
+              <p>Bitte mach so viele Angaben wie mÃ¶glich:
                 <ul>
                   <li>Welche Ausgabe des Skripts ist es? Steht im Vorwort auf
                       Seite&nbsp;4.
                   <li>Auf welcher Seite ist der Fehler?
                   <li>Wo auf der Seite ist der Fehler? Oben, Mitte, unten?
                   <li>Was ist falsch?
-                  <li>Gib auch 5&nbsp;Wörter vor und nach der Fehlerstelle an.
-                  <li>Deine E-Mailadresse um Dich nochmal fragen zu können.
+                  <li>Gib auch 5&nbsp;WÃ¶rter vor und nach der Fehlerstelle an.
+                  <li>Deine E-Mailadresse um Dich nochmal fragen zu kÃ¶nnen.
                 </ul>
                 <form method=\"post\" action=\"mail.html\">
                   <input type=\"hidden\" name=\"id\" value=\"$id\"/>
@@ -97,7 +97,7 @@ if ($id=="SKRIPT") {
         if (file_exists($filename)) {
           echo "<ul><li><a href='$filename'>$filename</a></li></ul>";
         } else {
-          echo "Leider noch keine Quellen verfügbar. Informationen gibt es
+          echo "Leider noch keine Quellen verfÃ¼gbar. Informationen gibt es
           unter <a href='mailto:skripte@listserv.uni-jena.de'>
           skripte@listserv.uni-jena.de</a>";
         }
@@ -106,12 +106,12 @@ if ($id=="SKRIPT") {
           echo "<ul><li><a href='$filename'>$filename</a></li></ul>";
 }
 echo "<p>Es sind alle recht herzlich eingeladen, an den Dokumenten mitzuarbeiten
-und wenn es nur ist, die Fehler darin zu suchen oder Vorschläge zu
+und wenn es nur ist, die Fehler darin zu suchen oder VorschlÃ¤ge zu
 machen &ndash;&nbsp;damit ist auch viel geholfen!</p>";
 
 if ($id != "SKRIPT" && file_exists("$id.Changelog"))
 {
-    echo "<h2>Letzte Änderungen</h2>\n<pre>",
+    echo "<h2>Letzte Ã„nderungen</h2>\n<pre>",
       htmlentities(file_get_contents("$id.Changelog"), ENT_COMPAT, "UTF-8"),
       "</pre>\n";
 }
