Variable mit Pfad für statische Daten; available_skripte umbenennen
Ophelia wird im Wurzelverzeichnis ausgeführt. Daher können wir keine
relativen Pfadangaben verwenden. Um nicht immer den ganzen Pfad anzugeben
und um flexibel zu bleiben, definiert die Variable data_path_prefix das
Verzeichnis mit den statischen Daten wie PDFs und den Logs.

Der Dateiname für die Datei mit den verfügbaren Skripten klingt komisch.
Daher einheitlich Englisch daraus machen available_scripts und dabei
gleich auf absoluten Pfad umstellen.

git-svn-id: https://svn.lug-jena.de/uni-skripte@1669 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/status.html
+++ b/web/status.html
@@ -1,7 +1,7 @@
 import os.path
 import re
 
-filename = lambda script_id: './%s.Build.log' % script_id
+filename = lambda script_id: '%s/%s.Build.log' % (data_path_prefix, script_id)
 
 exists = lambda script_id: os.path.exists(filename(script_id))
 
