SKRIPT als ID verwenden, wenn keine angegeben wurde
git-svn-id: https://svn.lug-jena.de/uni-skripte@1671 fe66431f-f319-0410-8186-f4e9b7e7c232

--- a/web/skripte.html
+++ b/web/skripte.html
@@ -1,3 +1,4 @@
+script_id_given = False
 env = __request__.env
 if env.QUERY_STRING:
     from cgi import parse_qs
@@ -7,15 +8,16 @@ if env.QUERY_STRING:
         script_id = script_id[0]
         script_id_given = script_id != ''
 
+if not script_id_given:
+    script_id = 'SKRIPT'
+
 <?xml?>
-<tal:heading condition="script_id">
-  <h1 tal:content="string:Skript: $script_id" />
-</tal:heading>
-<tal:heading condition="not script_id">
+<h1 tal:condition="script_id_given" tal:content="string:Skript: $script_id" />
+<tal:heading condition="not:script_id_given">
   <h1>Allgemeine Anleitung</h1>
 
   <p>
-    Im Folgenden steht SKRIPT f&uuml;r den Namen eines
+    Im Folgenden steht <tal:id content="script_id" /> f&uuml;r den Namen eines
     der Projekte für das jeweilige Vorlesungsskript. Zur Zeit gibt es die
     folgenden:
   </p>
